# a2z-soc-platform

./: .dockerignore  .env  .gitignore  A2Z_IDS_INSTALLATION_GUIDE.md  A2Z_SNORT_RULES_GUIDE.md  A2Z_SOC_COMPREHENSIVE_VALUATION.md  AWS_HOSTING_COST_ANALYSIS.md  CLOUD-INFRASTRUCTURE-ASSESSMENT-2025-07-05T11-23-19-812Z.md  COMPREHENSIVE-SAAS-CLOUD-ARCHITECTURE.md  CROSS_PLATFORM_DEPLOYMENT_GUIDE.md  CROSS_PLATFORM_SUMMARY.md  DARK_MODE_INTEGRATION_COMPLETE.md  DATABASE-SECURITY-ANALYSIS.md  DEPLOYMENT-STATUS.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCKER_PACKAGING_SUMMARY.md  Dockerfile  ENHANCED-SAAS-PRICING-STRATEGY-2025.md  ENHANCED-SAAS-SECURITY-REPORT-2025.md  FINAL_SUMMARY.md  GO_TO_MARKET_STRATEGY.md  INTEGRATIONS_README.md  INTEGRATION_COMPLETE.md  K8S-DEPLOYMENT-ASSESSMENT-2025-07-05T11-28-55-669Z.md  LINKEDIN_ARTICLE_A2Z_SOC_ENTERPRISE_STRATEGY.md  LINKEDIN_ARTICLE_A2Z_SOC_OPEN_SOURCE.md  LINKEDIN_ARTICLE_CYBERSECURITY_AUDIT_AUTOMATION.md  LINKEDIN_ARTICLE_ENTERPRISE_RISK_MANAGEMENT.md  LINKEDIN_ARTICLE_GRC_AUTOMATION_PLATFORM.md  LINKEDIN_ARTICLE_GRC_GAMIFICATION.md  LINKEDIN_ARTICLE_INCIDENT_RESPONSE_GAMIFICATION.md  LINKEDIN_ARTICLE_ISO27001_COMPLIANCE_AUTOMATION.md  LINKEDIN_ARTICLE_SIEM_SOAR_GAMIFICATION.md  LINKEDIN_ARTICLE_SOC2_COMPLIANCE_AUTOMATION.md  LINKEDIN_ARTICLE_THIRD_PARTY_RISK_MANAGEMENT.md  MULTI_TENANT_IMPLEMENTATION_STATUS.md  MULTI_TENANT_SAAS_EVOLUTION_PLAN.md  OPEN_SOURCE_BUSINESS_MODEL_STRATEGY.md  PLATFORM-STATUS-UPDATE.md  PROJECT_STATUS.md  (+48 more)
.github/workflows/: ci-cd.yml
a2z-ids-ips/: Makefile  Makefile.standalone  README-STANDALONE.md  README.md  docker-compose.yml  status-check.sh
a2z-ids-ips/api/: package-lock.json  package.json  server.js
a2z-ids-ips/config/: config.yaml
a2z-ids-ips/core-engine/: Cargo.toml  Dockerfile
a2z-ids-ips/core-engine/src/: database.rs  detection.rs  macos_support.rs  main.rs  network.rs
a2z-ids-ips/management-api/: Dockerfile  api_test.go  go.mod  go.sum  main.go
a2z-ids-ips/monitoring/: prometheus.yml
a2z-ids-ips/rules/: sample-community.rules
a2z-ids-ips/scripts/: backup-restore.sh  deploy.ps1  deploy.sh  health-monitor.sh  init-db.sql  quick-install.sh  update-system.sh  verify-installation.sh
a2z-ids-ips/web-interface/: Dockerfile  nginx.conf  package.json
agents/cloud-connector/: package.json
agents/endpoint-agent/: package.json
agents/log-collector/: package.json
agents/network-agent/: index.js  package-lock.json  package.json  standalone-server.js
api/: .env  .env.backup  .env.development  .env.example  README.md  env.sample  index-saas.js  index.js  index.js.backup  index.js.backup2  package-lock.json  package.json  setup-dev.sh  simple-api.js  test-setup.js
api/config/: keys.js
api/controllers/: aiInsights.js  audits.js  authController.js  cloudInfraController.js  threatIntelligence.js
api/docs/: cloud-infra-api.md  rapidapi-spec.js
api/middleware/: auth.js  tenantIsolation.js
api/routes/: admin.js  agents-simple.js  agents.js  aiInsights.js  alerts.js  audits.js  auth.js  billing.js  cloudInfra.js  compliance.js  dashboard.js  ids-logs.js  idsLogs.js  integrations.js  network-agents-fixed.js  network-agents.js  onboarding.js  recommendations.js  security-events.js  securityEvents.js  siem.js  soar-simple.js  soar.js  test-auth-fixed.js  test-auth.js  threatIntelligence.js  user.js
api/services/: agentService.js  alertProcessingService.js  dataIngestionService.js  databaseService.js  elasticsearchService.js  emailService.js  onboardingService.js  opensearchService.js  packetCaptureService.js  siemCorrelationEngine.js  siemIngestionService.js  snortService.js  soarOrchestrator.js  subscriptionService.js  suricataService.js  tenantService.js  userService.js  wazuhService.js
api/tests/: README.md  cloudInfraDiscovery.test.js  env.test  runTest.js
api/utils/: awsClient.js  azureClient.js  googleCloudClient.js  virusTotal.js
database/: enhanced-security-schema.sql  migrate.js  schema.sql
docs/: BUSINESS_CASE.md  README.md
k8s/: api-deployment.yaml  configmap.yaml  deploy.sh  frontend-deployment.yaml  ingress.yaml  monitoring-deployment.yaml  namespace.yaml  postgres-deployment.yaml  redis-deployment.yaml  secrets.yaml
scripts/: healthcheck.sh  startup.sh
src/: App.tsx  index.css
(+522 files in other folders)
