[package]
name = "a2z-ids-core"
version = "1.0.0"
edition = "2021"
authors = ["A2Z SOC Team <dev@a2zsoc.com>"]
description = "A2Z IDS/IPS Core Detection Engine - Network intrusion detection and prevention"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"

# CLI and configuration
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Network packet capture and analysis
pnet = "0.34"
pnet_datalink = "0.34"
pnet_packet = "0.34"

# Pattern matching and regex
regex = "1.10"
pcre2 = "0.2"

# HTTP client for API communication
reqwest = { version = "0.11", features = ["json"] }

# Signal handling
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

# Configuration management
config = "0.13"

# Metrics and monitoring
prometheus = "0.13"

# Security and hashing
ring = "0.17"
sha2 = "0.10"

# Concurrency utilities
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Memory management
bytes = "1.5"

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
system-configuration = "0.5"
core-foundation = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
netlink-packet-core = "0.5"
netlink-packet-route = "0.17"
netlink-sys = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winsock2", "ws2def", "ws2tcpip"] }
windows = { version = "0.52", features = ["Win32_NetworkManagement_IpHelper"] }

[features]
default = ["packet-capture", "threat-detection", "rule-engine"]
packet-capture = []
threat-detection = []
rule-engine = []
ml-detection = []
cloud-sync = []

[[bin]]
name = "a2z-ids"
path = "src/main.rs" 

[profile.release]
opt-level = 3
lto = true
codegen-units = 1 
